Manifestos kubernets/manifestos-cluster-base/apply-namespace.yaml
# kubectl apply -f namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-microservices
