Manifestos kubernets/manifestos-cluster-base/ingress-controler.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-ingress
  namespace: fiap-microservices
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
  #kubectl apply -f ingress-controler.yaml
